<resources>
	<string name="activitymain_java_progress_importconfig">Importing Configuration.\nAfter this task, AiCiA will closed.</string>
	<string name="activitymain_java_progress_closeall">Disconnecting from IRC Server...</string>
    <string name="activitymain_java_noserver">You must create new server setting. Select [Menu]-[More]-[Edit Server Setting].</string>
    <string name="activitymain_java_noserverautoconnect">No Servers Checked [Auto Connect].</string>
    <string name="activitymain_java_errorautoconnect">Error on Connection.</string>
	<string name="activityselectttffile_java_title">- Select Truetype Font</string>
    <string name="activitymain_java_inputhistory_title">History</string>
	<string name="activity_ircchannelconfig_save_button">Save</string>
	<string name="activity_ircchannelconfig_cancel_button">Cancel</string>
	<string name="activity_ircchannelconfig_channelname_text">Channel:</string>
	<string name="activity_ircchannelconfig_putonsublog_checkbox">Output Text to Sub-log</string>
	<string name="activity_ircchannelconfig_putonsublogall_checkbox">Output to Sub-log Always</string>
	<string name="activity_ircchannelconfig_usealert_checkbox">Notify by Keyword</string>
	<string name="activity_ircchannelconfig_usealertall_checkbox">Notify All Lines</string>
	<string name="activity_ircchannelconfig_putpaletextonsublog_checkbox">Also Output System Message to Sub-log</string>
	<string name="activity_ircchannelconfig_alertnotify_checkbox">Show Line by OS Notify Ticker</string>
	<string name="activityircchannelconfig_java_channelsetting">Edit Channel Setting</string>
	<string name="activityircchannelconfig_java_save_title">Confirmation</string>
	<string name="activityircchannelconfig_java_save">Save Channel Setting.\n[%s]\nOK?</string>
	<string name="activityircchannelconfig_java_cancel_title">Confirmation</string>
	<string name="activityircchannelconfig_java_cancel">Cancel Editing.\nOK?</string>
	<string name="pref_exweblist_web8_summary"></string>
	<string name="pref_exweblist_web8_title">(not assigned)</string>
	<string name="pref_exweblist_web8">Website 8</string>
	<string name="pref_exweblist_web7_summary"></string>
	<string name="pref_exweblist_web7_title">(not assigned)</string>
	<string name="pref_exweblist_web7">Website 7</string>
	<string name="pref_exweblist_web6_summary"></string>
	<string name="pref_exweblist_web6_title">(not assigned)</string>
	<string name="pref_exweblist_web6">Website 6</string>
	<string name="pref_exweblist_web5_summary"></string>
	<string name="pref_exweblist_web5_title">(not assigned)</string>
	<string name="pref_exweblist_web5">Website 5</string>
	<string name="pref_exweblist_web4_summary"></string>
	<string name="pref_exweblist_web4_title">(not assigned)</string>
	<string name="pref_exweblist_web4">Website 4</string>
	<string name="pref_exweblist_web3_summary"></string>
	<string name="pref_exweblist_web3_title">(not assigned)</string>
	<string name="pref_exweblist_web3">Website 3</string>
	<string name="pref_exweblist_web2_summary"></string>
	<string name="pref_exweblist_web2_title">(not assigned)</string>
	<string name="pref_exweblist_web2">Website 2</string>
	<string name="pref_exweblist_web1_summary"></string>
	<string name="pref_exweblist_web1_title">(not assigned)</string>
	<string name="pref_exweblist_web1">Website 1</string>
	<string name="pref_exapplist_app8_summary"></string>
	<string name="pref_exapplist_app8_title">(not assigned)</string>
	<string name="pref_exapplist_app8">Application 8</string>
	<string name="pref_exapplist_app7_summary"></string>
	<string name="pref_exapplist_app7_title">(not assigned)</string>
	<string name="pref_exapplist_app7">Application 7</string>
	<string name="pref_exapplist_app6_summary"></string>
	<string name="pref_exapplist_app6_title">(not assigned)</string>
	<string name="pref_exapplist_app6">Application 6</string>
	<string name="pref_exapplist_app5_summary"></string>
	<string name="pref_exapplist_app5_title">(not assigned)</string>
	<string name="pref_exapplist_app5">Application 5</string>
	<string name="pref_exapplist_app4_summary"></string>
	<string name="pref_exapplist_app4_title">(not assigned)</string>
	<string name="pref_exapplist_app4">Application 4</string>
	<string name="pref_exapplist_app3_summary"></string>
	<string name="pref_exapplist_app3_title">(not assigned)</string>
	<string name="pref_exapplist_app3">Application 3</string>
	<string name="pref_exapplist_app2_summary"></string>
	<string name="pref_exapplist_app2_title">(not assigned)</string>
	<string name="pref_exapplist_app2">Application 2</string>
	<string name="pref_exapplist_app1_summary"></string>
	<string name="pref_exapplist_app1_title">(not assigned)</string>
	<string name="pref_exapplist_app1">Application 1</string>
	<string name="activitymain_java_copybutton_2">Copy from Sub-log</string>
	<string name="activitymain_java_copybutton_1">Copy from Main-log</string>
	<string name="activitymain_java_ubutton_tig_2">IRC Menu</string>
	<string name="activitymain_java_ubutton_tig_1">TIG Menu</string>
	<string name="activitymain_java_chbutton_3">Notified Channel List</string>
	<string name="activitymain_java_chbutton_2">Unread Channel List</string>
	<string name="activitymain_java_chbutton_1">Channel List</string>
	<string name="activitymain_java_exweb_button_choose">Choose from Bookmark</string>
	<string name="activitymain_java_exweb_button_clear">Remove</string>
	<string name="activitymain_java_exweb_noweb">Invalid Data.</string>
	<string name="activitymain_java_exweb_title">Choose Website</string>
	<string name="activitymain_java_exweb_none">(not assigned)</string>
	<string name="activitymain_java_exweb_noreg">Website is not assigned.</string>
	<string name="activitymain_java_exweb_edit_title">Edit Website List</string>
	<string name="activitymain_java_progress_createbookmarkmenu">Creating Bookmark List...</string>
	<string name="activitymain_java_exapp_button_choose">Choose from List</string>
	<string name="activitymain_java_exapp_button_clear">Remove</string>
	<string name="activitymain_java_exapp_noapp">Invalid Data.</string>
	<string name="activitymain_java_exapp_title">Choose Application</string>
	<string name="activitymain_java_exapp_none">(not assigned)</string>
	<string name="activitymain_java_exapp_notassigned">(not assigned)</string>
	<string name="activitymain_java_exapp_notfound">(not available)</string>
	<string name="activitymain_java_exapp_noreg">Application is not assigned.</string>
	<string name="activitymain_java_exapp_edit_title">Edit Application List</string>
	<string name="activitymain_java_progress_createapplicationmenu">Creating App List...</string>
	<string name="activitymain_java_progress_rebootlayout">Change Setting...</string>
	<string name="activitymain_java_progress_changeconfiguration">Change Setting...</string>
	<string name="activitymain_java_progress_bindservice">Connecting to IRC Service...</string>
	<string name="activitymain_java_ircutility_ask_raw">RAW Command-line sending to IRC server</string>
	<string name="activitymain_java_ircutility_ask_talkuser">Choose User (Private Talk)</string>
	<string name="activitymain_java_ircutility_ask_whoisuser">Choose User (Whois)</string>
	<string name="activitymain_java_ircutility_ask_operpass">Password</string>
	<string name="activitymain_java_ircutility_ask_operuser">User Name (Get Ops)</string>
	<string name="activitymain_java_ircutility_ask_decopuser">Choose User (Take Ops)</string>
	<string name="activitymain_java_ircutility_ask_incopuser">Choose User (Give Ops)</string>
	<string name="activitymain_java_ircutility_ask_partmsg">Message of Leave Channel</string>
	<string name="activitymain_java_ircutility_ask_kickreason">Reason for Kicking</string>
	<string name="activitymain_java_ircutility_ask_kickuser">Choose User (Kick)</string>
	<string name="activitymain_java_ircutility_ask_inviteuser">Invite User</string>
	<string name="activitymain_java_ircutility_ask_joinchannel">Join Channel</string>
	<string name="activitymain_java_ircutility_ask_joinchannel_comment">* Enter "Channel,Password" if you join the Channel with Password.</string>
    <string name="activity_ircserverconfig_cancel_button">Cancel</string>
    <string name="activity_ircserverconfig_save_button">Save</string>
    <string name="activity_ircserverconfig_alertkeywords_edittext">Notify Keywords:</string>
    <string name="activity_ircserverconfig_fortig_checkbox">Use TweetIRCGateway Mode</string>
    <string name="activity_ircserverconfig_putpaletextonsublog_checkbox">Also Output System Message to Sub-log</string>
    <string name="activity_ircserverconfig_alertnotify_checkbox">Show Line by OS Notify Ticker</string>
    <string name="activity_ircserverconfig_autoreconnect_checkbox">Auto Reconnect</string>
    <string name="activity_ircserverconfig_autoconnect_checkbox">Auto Connect</string>
    <string name="activity_ircserverconfig_usessl_checkbox">by SSL</string>
    <string name="activity_ircserverconfig_channel_edittext">Join Channels:</string>
    <string name="activity_ircserverconfig_encoding_button">Selection</string>
    <string name="activity_ircserverconfig_encoding_edittext">Encoding:</string>
    <string name="activity_ircserverconfig_realname_edittext">Real Name:</string>
    <string name="activity_ircserverconfig_username_edittext">User Name:</string>
    <string name="activity_ircserverconfig_nick_edittext">Nick:</string>
    <string name="activity_ircserverconfig_pass_edittext">Password:</string>
    <string name="activity_ircserverconfig_port_edittext">Port:</string>
    <string name="activity_ircserverconfig_host_edittext">Host Name:</string>
    <string name="activity_ircserverconfig_servername_edittext">Setting Name:</string>
    <string name="menu_main_inputhistory_titlecondensed">History</string>
    <string name="menu_main_inputhistory_title">Input History</string>
    <string name="menu_main_copybutton_titlecondensed">Copy Log</string>
    <string name="menu_main_copybutton_title">Copy Log</string>
    <string name="menu_main_ubutton_titlecondensed">[U] button</string>
    <string name="menu_main_ubutton_title">[U] button</string>
    <string name="menu_main_chbutton_titlecondensed">[Ch] button</string>
    <string name="menu_main_chbutton_title">[Ch] button</string>
    <string name="menu_main_exweb_edit_titlecondensed">Edit WebSite</string>
    <string name="menu_main_exweb_edit_title">Edit Website List</string>
    <string name="menu_main_exweb_titlecondensed">Web</string>
    <string name="menu_main_exweb_title">Website</string>
    <string name="menu_main_exapp_edit_titlecondensed">Edit Appli</string>
    <string name="menu_main_exapp_edit_title">Edit Application List</string>
    <string name="menu_main_exapp_titlecondensed">Appli</string>
    <string name="menu_main_exapp_title">Application</string>
    <string name="menu_main_version_titlecondensed">Version</string>
    <string name="menu_main_version_title">Version</string>
    <string name="menu_main_help_titlecondensed">Help</string>
    <string name="menu_main_help_title">Help</string>
    <string name="menu_main_shutdown_titlecondensed">Shutdown</string>
    <string name="menu_main_shutdown_title">Shutdown</string>
    <string name="menu_main_setting_titlecondensed">Preference</string>
    <string name="menu_main_setting_title">Preference</string>
    <string name="menu_main_serverlist_titlecondensed">Edit Server</string>
    <string name="menu_main_serverlist_title">Edit Server Setting</string>
    <string name="menu_main_channel_edit_titlecondensed">Channel</string>
    <string name="menu_main_channel_edit_title">Channel Setting</string>
    <string name="menu_main_connect_titlecondensed">Connect</string>
    <string name="menu_main_connect_title">Connect</string>
    <string name="menu_main_clearnotify_titlecondensed">Clear All Notification</string>
    <string name="menu_main_clearnotify_title">Clear All Notification</string>
</resources>